samples/_failures_safe/1761255761_527606_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1156a92a.c: In function ‘main’:
./samples/SAFE/__tmp_1156a92a.c:158:10: error: ‘EVENT_DATA’ undeclared (first use in this function)
  158 |         {EVENT_DATA
      |          ^~~~~~~~~~
./samples/SAFE/__tmp_1156a92a.c:158:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1156a92a.c:159: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_1156a92a.c:158:9: note: to match this ‘{’
  158 |         {EVENT_DATA
      |         ^
./samples/SAFE/__tmp_1156a92a.c:158:9: error: expected declaration or statement at end of input
